Fixed hr spacing overlap in sidebar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -284,7 +284,7 @@ ul {
 }
 
 div.card-body {
-    margin: 0.9375rem 0 -0.9375rem 0;
+    margin: 0.9375rem 0 0 0;
     padding: 0;
 }
 
